2006-12-27  Albert Astals Cid <aacid@kde.org>

	* poppler/Catalog.h:
	* qt4/src/poppler-qt4.h: Remove , after last value of enum. Thanks to
	André Wöbbeking

2006-12-23  Albert Astals Cid <aacid@kde.org>

	* qt/poppler-page.cc: Fix memory leak in Page::textList. Patch by
	Jerry Epplin <jepplin@globalvelocity.com>

	* poppler/Page.cc: Fix memory leak when reading a wrong color map in a
	thumbnail. Patch by Scott Turner <scotty1024@mac.com>

2006-12-19  Albert Astals Cid <aacid@kde.org>

	* poppler/SplashOutputDev.cc: Fix gray calculation. Patch by Scott
	Turner <scotty1024@mac.com>

2006-11-23  Albert Astals Cid <aacid@kde.org>

	* m4/libjpeg.m4: Make JPEG library header search work under MSYS.
	Patch by Alexis	Wilke

2006-11-19  Albert Astals Cid <aacid@kde.org>

	* qt4/src/poppler-link.cc:
	* qt4/src/poppler-page.cc:
	* qt4/src/poppler-qt4.h:
	* qt4/src/poppler-textbox.cc: Fix memory leaks
	* splash/Splash.cc: Initialize the values of nClipRes

2006-11-11  Albert Astals Cid <aacid@kde.org>

	* poppler/PSOutputDev.cc: Fix typo when outputing PS scale

2006-10-18  Albert Astals Cid <aacid@kde.org>

	* qt4/src/poppler-document.cc:
	* qt4/src/poppler-private.h: Do not crash when opening a encrypted
	document. Do not crash when unlocking a locked document. 

2006-10-12  Albert Astals Cid <aacid@kde.org>

	* splash/Splash.cc:
	* splash/SplashErrorCodes.h: Do not crash on documents that report a
	0x0 mask for an image, like
	http://bugs.kde.org/attachment.cgi?id=18083&action=view

2006-09-30  Albert Astals Cid <aacid@kde.org>

	* qt4/src/poppler-page.cc: PA is optional, H is a name not a string

2006-09-25  Albert Astals Cid <aacid@kde.org>

	* glib/Makefile.am
	* qt/Makefile.am
	* qt4/src/Makefile.am
	* qt4/tests/Makefile.am
	* test/Makefile.am
	* utils/Makefile.am: Add FONTCONFIG_CFLAGS FONTCONFIG_LIBS for people
	that need them. Patch by morfoh@opensde.org. Fixes bug #8415

2006-09-21  Kristian Høgsberg  <krh@redhat.com>
