@@ -46,7 +46,9 @@ EmbeddedFile::EmbeddedFile(EmbFile *embfile)
 {
 	m_embeddedFile = new EmbeddedFileData();
 	m_embeddedFile->m_label = QString(embfile->name()->getCString());
-	m_embeddedFile->m_description = QString(UGooString(*embfile->description()).getCString());
+	const char *aux = UGooString(*embfile->description()).getCString();
+	m_embeddedFile->m_description = QString(aux);
+	delete[] aux;
 	m_embeddedFile->m_modDate = convertDate(embfile->modDate()->getCString());
 	m_embeddedFile->m_createDate = convertDate(embfile->createDate()->getCString());
 	embfile->streamObject().copy(&m_embeddedFile->m_streamObject);
