@@ -1,3 +1,9 @@
+2006-12-28  Albert Astals Cid <aacid@kde.org>
+
+	* qt4/src/poppler-embeddedfile.cc:
+	* qt4/src/poppler-document.cc:
+	* qt/poppler-document.cc: Fix memory leaks.
+
 2006-12-27  Albert Astals Cid <aacid@kde.org>
 
 	* poppler/Catalog.h:
